# 3DRenderingTest

./: .gitignore  CMakeLists.txt  readme.md
include/: camera.hpp  shader.hpp
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp  shader.cpp
